# eval_nonlinear_model_r2

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/eval_r2/: __about__.py
src/eval_r2/models/: baroreflex.py  base.py  logLogistic.py  logistic.py  weibull.py
tests/: __init__.py
tests/models/: test_baroreflex_model.py  test_base_kernel.py  test_log_logistic_models.py  test_logistic_models.py  test_weibull_models.py
