[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-r2"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jModeler"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jModeler/eval_nonlinear_model_r2/#readme"
Issues = "https://github.com/jModeler/eval_nonlinear_model_r2/issues"
Source = "https://github.com/jModeler/eval_nonlinear_model_r2/"

[tool.hatch.version]
path = "src/eval_r2/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/eval_r2 tests}"

[tool.coverage.run]
source_pkgs = ["eval_r2", "tests"]
branch = true
parallel = true
omit = [
  "src/eval_r2/__about__.py",
]

[tool.coverage.paths]
eval_r2 = ["src/eval_r2", "*/eval-r2/src/eval_r2"]
tests = ["tests", "*/eval-r2/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"